[package]
name = "multiplayer_rooms"  # Changed to match Anchor.toml
version = "0.2.2"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multiplayer_rooms"  # Changed to match package name

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap", "custom-panic"]  # Enable custom-heap by default
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang = { workspace = true }
