[package]
name = "create-room-system"
version = "0.2.2"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_room_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
player = { path = "../../components/player", features = ["no-entrypoint"] } 
room = { path = "../../components/room", features = ["no-entrypoint"] }
# common = { path = "../../components/common", features = ["no-entrypoint"] }